first part of newsletter